# http-client

./: Cargo.toml  Dockerfile
src/: api.rs  main.rs
src/api/productagreement/: calls.rs
src/http/: client.rs  model.rs
src/model/productagreement/: model.rs
src/output/: model.rs
