[package]
name = "http-client"
version = "0.1.0"
edition = "2024"

[dependencies]
atty = "0.2.14"
chrono = "0.4.44"
log = "0.4.29"
once_cell = "1.21.4"
oracle = "0.6.3"
regex = "1.12.3"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = "1.0.228"
serde_json = "1.0.150"
simple-log = "2.4.0"
simplelog = "0.12.2"
